# CODE

./: .gitignore  CODE.ipynb  DDIB-Copy1.ipynb  DDIB.ipynb  Denoising_Test.ipynb  LICENSE  ODEdit.ipynb  README.md  Untitled.ipynb  Untitled1.ipynb  pyproject.toml  requirements.txt  train.py
code/: environment.yaml  main.py  train.py
code/config/: config.yaml
code/config/trainer/: base_trainer.yaml  celebahq_hugginface.yaml
code/datasets/: __init__.py  base.py  celebahq.py  corrupt.py  corruptions.py  faces.py  transform_finder.py
code/datasets/utils_corruption/: converters.py  image.py  perlin_noise.py
code/metrics/scripts/: calculate_all_metrics.sh  calculate_metrics.py  filter_data.py  save_best.py
code/sde/: sdelib.py
code/trainers/: base_trainer.py  hugginface_based_trainer.py
code/utils/: utils.py
ddpm/: ddib_diffusion.py  ddib_model.py  ddib_samplers.py  ddib_utils.py  diffusion.py  fp_16_utils.py  fp_16_utils_old.py  likelihood.py  logger.py  main.py  metrics_evaluation.py  model.py  sde_lib.py  test_log.py  train.py
ddpm/config/: config.yaml
ddpm/config/data/: celeba.yaml
ddpm/datasets/: __init__.py  audio.py  celeba.py  celebahq.py  cityscape.py  corruptions.py  gta5.py  imagenet.py  lsun.py  utils.py
ddpm/models/: utils.py
ddpm/score/: fid.py
ddpm/sde/: sdelib.py
ddpm/trainers/: audio_trainer.py  base_trainer.py  celeba_trainer.py  cityscape_trainer.py  ddib_based_trainer.py  ddib_based_trainer_old.py  hugginface_based_trainer.py
ddpm/utils/: utils.py
docs/: README.md  index.html
website/: index.html
(+26 files in other folders)
